Recysell/src/main/java/com/example/Recysell/error/DonacionNotFoundException.java
package com.example.Recysell.error;

public class DonacionNotFoundException extends NotFoundException{
    public DonacionNotFoundException() {
        super("Donacion no encontrada");
    }
}
